fix: Make it look less-terrible on mobile
I think that this adjusts the layout to make the weird zooming behavior
not be broken.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
-  height: 100%;
+  height: 100vh;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
