--- a/src/components/Play/Play.module.css
+++ b/src/components/Play/Play.module.css
@@ -4,4 +4,6 @@
   flex: 1;
   justify-content: space-between;
   height: 100%;
+  max-width: 500px;
+  margin: 0 auto;
 }
