--- a/src/components/Status/Status.module.css
+++ b/src/components/Status/Status.module.css
@@ -1,4 +1,5 @@
 .input:empty:before {
-  content: "Velg én bokstav …";
+  content: "Velg én bokstav…";
   opacity: 30%;
+  text-wrap: pretty;
 }
